--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello there
+<html>
+  <title>Anshul Bansal</title>
+  
+  <body>
+    Hello there!  This is my github page.
+  </body>
+</html>
+
+
+
