--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <htm>
+    <title>
+        Anshul Bansal
+    </title>
     <h1>
       Hello there!  This is my github page.
 </h1>
+    <div>
+        <div>
+        here i will display my apps
+        </div>
+    </div>
 
 </html>
 
